--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(89deg, #f8f03F 0%, #04c8de 100%);
+  background: linear-gradient(89deg, #ff62b3 0%, #04c8de 100%);
+}
+
+button{
+  cursor: pointer;
 }
 
 code {
